Fix new design on mobile.

--- a/assets/scss/termo-plan.scss
+++ b/assets/scss/termo-plan.scss
@@ -70,6 +70,9 @@
 
 .thermo-plan--horizontal {
 	padding: 0 20px;
+	box-sizing: border-box;
+	width: 100%;
+	overflow: hidden;
 
 	.thermo-plan--chart {
 		height: 50px;
